# lang-lib

./: .editorconfig  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: benchmarks.yml  ci.yml
benches/: performance.rs
docs/: API.md  PROJECT-GUIDELINES.md
docs/release-notes/: v1.0.1.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
examples/: actix_server.rs  axum_server.rs  basic.rs  hot_reload.rs  server.rs
examples/common/: mod.rs
examples/locales/: en.toml  es.toml
src/: change.rs  error.rs  intern.rs  lib.rs  loader.rs  registry.rs  request.rs  store.rs  watch.rs
tests/: concurrency.rs  integration.rs  registry.rs  watch.rs
